translation-methods/04-parser-generator/src/grammar/antlr/KingRulesParser.java
// Generated from /Users/daniilkorolev/Documents/GitHub/3-rd-year/translation-methods/04-parser-generator/src/grammar/KingRules.g4 by ANTLR 4.9
package grammar.antlr;

import configurator.rules.*;
import configurator.rules.atoms.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class KingRulesParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SkipedChars=1, LT_BRACE=2, RT_BRACE=3, L_CURLY=4, R_CURLY=5, L_BRACE=6, 
		R_BRACE=7, OR=8, SEMICOLON=9, COMMA=10, PACKAGE=11, GRAMMAR=12, REGEXP=13, 
		SKIP_NAME=14, ARROW=15, DOT=16, IDENTIFIER=17, TERMINAL_NAME=18, CURLY_CODE=19, 
		LOWERCASE=20, CAPITALIZED=21, ARG_CODE=22;
	public static final int
		RULE_mainGrammar = 0, RULE_grammarRules = 1, RULE_grammarName = 2, RULE_packageName = 3, 
		RULE_rules = 4, RULE_singleRule = 5, RULE_terminalRule = 6, RULE_syntaxRule = 7, 
		RULE_allRules = 8, RULE_ruleLine = 9, RULE_atoms = 10, RULE_atomRule = 11, 
		RULE_terminal = 12, RULE_syntax = 13, RULE_skipRule = 14, RULE_arg = 15, 
		RULE_takenArgs = 16, RULE_takenArgsList = 17, RULE_args = 18, RULE_argsList = 19;
	private static String[] makeRuleNames() {
		return new String[] {
			"mainGrammar", "grammarRules", "grammarName", "packageName", "rules", 
			"singleRule", "terminalRule", "syntaxRule", "allRules", "ruleLine", "atoms", 
			"atomRule", "terminal", "syntax", "skipRule", "arg", "takenArgs", "takenArgsList", 
			"args", "argsList"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'<'", "'>'", "'{'", "'}'", "'('", "')'", "'|'", "';'", "','", 
			"'package'", "'grammar'", null, "'skip'", "'=>'", "'.'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "SkipedChars", "LT_BRACE", "RT_BRACE", "L_CURLY", "R_CURLY", "L_BRACE", 
			"R_BRACE", "OR", "SEMICOLON", "COMMA", "PACKAGE", "GRAMMAR", "REGEXP", 
			"SKIP_NAME", "ARROW", "DOT", "IDENTIFIER", "TERMINAL_NAME", "CURLY_CODE", 
			"LOWERCASE", "CAPITALIZED", "ARG_CODE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "KingRules.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public KingRulesParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class MainGrammarContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(KingRulesParser.EOF, 0); }
		public GrammarRulesContext grammarRules() {
			return getRuleContext(GrammarRulesContext.class,0);
		}
		public MainGrammarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainGrammar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KingRulesListener ) ((KingRulesListener)listener).enterMainGrammar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KingRulesListener ) ((KingRulesListener)listener).exitMainGrammar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KingRulesVisitor ) return ((KingRulesVisitor<? extends T>)visitor).visitMainGrammar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainGrammarContext mainGrammar() throws RecognitionException {
		MainGrammarContext _localctx = new MainGrammarContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_mainGrammar);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(41);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==GRAMMAR) {
				{
				setState(40);
				grammarRules();
				}
			}

			setState(43);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GrammarRulesContext extends ParserRuleContext {
		public GrammarNameContext grammarName() {
			return getRuleContext(GrammarNameContext.class,0);
		}
		public PackageNameContext packageName() {
			return getRuleContext(PackageNameContext.class,0);
		}
		public RulesContext rules() {
			return getRuleContext(RulesContext.class,0);
		}
		public GrammarRulesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_grammarRules; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KingRulesListener ) ((KingRulesListener)listener).enterGrammarRules(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KingRulesListener ) ((KingRulesListener)listener).exitGrammarRules(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KingRulesVisitor ) return ((KingRulesVisitor<? extends T>)visitor).visitGrammarRules(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GrammarRulesContext grammarRules() throws RecognitionException {
		GrammarRulesContext _localctx = new GrammarRulesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_grammarRules);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45);
			grammarName();
			setState(46);
			packageName();
			setState(47);
			rules();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GrammarNameContext extends ParserRuleContext {
		public String name;
		public Token n;
		public TerminalNode GRAMMAR() { return getToken(KingRulesParser.GRAMMAR, 0); }
		public TerminalNode CAPITALIZED() { return getToken(KingRulesParser.CAPITALIZED, 0); }
		public GrammarNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_grammarName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KingRulesListener ) ((KingRulesListener)listener).enterGrammarName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KingRulesListener ) ((KingRulesListener)listener).exitGrammarName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KingRulesVisitor ) return ((KingRulesVisitor<? extends T>)visitor).visitGrammarName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GrammarNameContext grammarName() throws RecognitionException {
		GrammarNameContext _localctx = new GrammarNameContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_grammarName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			match(GRAMMAR);
			setState(50);
			((GrammarNameContext)_localctx).n = match(CAPITALIZED);
			 ((GrammarNameContext)_localctx).name =  (((GrammarNameContext)_localctx).n!=null?((GrammarNameContext)_localctx).n.getText():null); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PackageNameContext extends ParserRuleContext {
		public String name;
		public Token n;
		public TerminalNode LT_BRACE() { return getToken(KingRulesParser.LT_BRACE, 0); }
		public TerminalNode PACKAGE() { return getToken(KingRulesParser.PACKAGE, 0); }
		public TerminalNode RT_BRACE() { return getToken(KingRulesParser.RT_BRACE, 0); }
		public TerminalNode IDENTIFIER() { return getToken(KingRulesParser.IDENTIFIER, 0); }
		public PackageNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_packageName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KingRulesListener ) ((KingRulesListener)listener).enterPackageName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KingRulesListener ) ((KingRulesListener)listener).exitPackageName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KingRulesVisitor ) return ((KingRulesVisitor<? extends T>)visitor).visitPackageName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PackageNameContext packageName() throws RecognitionException {
		PackageNameContext _localctx = new PackageNameContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_packageName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			match(LT_BRACE);
			setState(54);
			match(PACKAGE);
			setState(55);
			((PackageNameContext)_localctx).n = match(IDENTIFIER);
			setState(56);
			match(RT_BRACE);
			 ((PackageNameContext)_localctx).name =  (((PackageNameContext)_localctx).n!=null?((PackageNameContext)_localctx).n.getText():null); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RulesContext extends ParserRuleContext {
		public List<SingleRuleContext> singleRule() {
			return getRuleContexts(SingleRuleContext.class);
		}
		public SingleRuleContext singleRule(int i) {
			return getRuleContext(SingleRuleContext.class,i);
		}
		public RulesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rules; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KingRulesListener ) ((KingRulesListener)listener).enterRules(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KingRulesListener ) ((KingRulesListener)listener).exitRules(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KingRulesVisitor ) return ((KingRulesVisitor<? extends T>)visitor).visitRules(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RulesContext rules() throws RecognitionException {
		RulesContext _localctx = new RulesContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_rules);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(59);
				singleRule();
				}
				}
				setState(62); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SKIP_NAME) | (1L << IDENTIFIER) | (1L << TERMINAL_NAME))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SingleRuleContext extends ParserRuleContext {
		public TerminalRuleContext terminalRule() {
			return getRuleContext(TerminalRuleContext.class,0);
		}
		public SyntaxRuleContext syntaxRule() {
			return getRuleContext(SyntaxRuleContext.class,0);
		}
		public SkipRuleContext skipRule() {
			return getRuleContext(SkipRuleContext.class,0);
		}
		public SingleRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_singleRule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KingRulesListener ) ((KingRulesListener)listener).enterSingleRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KingRulesListener ) ((KingRulesListener)listener).exitSingleRule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KingRulesVisitor ) return ((KingRulesVisitor<? extends T>)visitor).visitSingleRule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SingleRuleContext singleRule() throws RecognitionException {
		SingleRuleContext _localctx = new SingleRuleContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_singleRule);
		try {
			setState(67);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TERMINAL_NAME:
				enterOuterAlt(_localctx, 1);
				{
				setState(64);
				terminalRule();
				}
				break;
			case IDENTIFIER:
				enterOuterAlt(_localctx, 2);
				{
				setState(65);
				syntaxRule();
				}
				break;
			case SKIP_NAME:
				enterOuterAlt(_localctx, 3);
				{
				setState(66);
				skipRule();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TerminalRuleContext extends ParserRuleContext {
		public TerminalRule rule;
		public Token TERMINAL_NAME;
		public ArgsListContext inheritedAttrs;
		public ArgsListContext returnAttrs;
		public Token REGEXP;
		public Token CURLY_CODE;
		public TerminalNode TERMINAL_NAME() { return getToken(KingRulesParser.TERMINAL_NAME, 0); }
		public TerminalNode ARROW() { return getToken(KingRulesParser.ARROW, 0); }
		public TerminalNode REGEXP() { return getToken(KingRulesParser.REGEXP, 0); }
		public TerminalNode CURLY_CODE() { return getToken(KingRulesParser.CURLY_CODE, 0); }
		public List<ArgsListContext> argsList() {
			return getRuleContexts(ArgsListContext.class);
		}
		public ArgsListContext argsList(int i) {
			return getRuleContext(ArgsListContext.class,i);
		}
		public TerminalRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_terminalRule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KingRulesListener ) ((KingRulesListener)listener).enterTerminalRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KingRulesListener ) ((KingRulesListener)listener).exitTerminalRule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KingRulesVisitor ) return ((KingRulesVisitor<? extends T>)visitor).visitTerminalRule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TerminalRuleContext terminalRule() throws RecognitionException {
		TerminalRuleContext _localctx = new TerminalRuleContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_terminalRule);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			((TerminalRuleContext)_localctx).TERMINAL_NAME = match(TERMINAL_NAME);
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==L_BRACE) {
				{
				setState(70);
				((TerminalRuleContext)_localctx).inheritedAttrs = argsList();
				}
			}

			setState(73);
			match(ARROW);
			setState(75);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==L_BRACE) {
				{
				setState(74);
				((TerminalRuleContext)_localctx).returnAttrs = argsList();
				}
			}

			setState(77);
			((TerminalRuleContext)_localctx).REGEXP = match(REGEXP);
			setState(79);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==CURLY_CODE) {
				{
				setState(78);
				((TerminalRuleContext)_localctx).CURLY_CODE = match(CURLY_CODE);
				}
			}

			 ((TerminalRuleContext)_localctx).rule =  new TerminalRule
			          ( (((TerminalRuleContext)_localctx).TERMINAL_NAME!=null?((TerminalRuleContext)_localctx).TERMINAL_NAME.getText():null),
			            (((TerminalRuleContext)_localctx).CURLY_CODE!=null?((TerminalRuleContext)_localctx).CURLY_CODE.getText():null),
			            (((TerminalRuleContext)_localctx).REGEXP!=null?((TerminalRuleContext)_localctx).REGEXP.getText():null),
			            (((TerminalRuleContext)_localctx).inheritedAttrs!=null?_input.getText(((TerminalRuleContext)_localctx).inheritedAttrs.start,((TerminalRuleContext)_localctx).inheritedAttrs.stop):null) == null ? null : ((TerminalRuleContext)_localctx).inheritedAttrs.arguments,
			            (((TerminalRuleContext)_localctx).returnAttrs!=null?_input.getText(((TerminalRuleContext)_localctx).returnAttrs.start,((TerminalRuleContext)_localctx).returnAttrs.stop):null)    == null ? null : ((TerminalRuleContext)_localctx).returnAttrs.arguments
			          );
			      
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SyntaxRuleContext extends ParserRuleContext {
		public String name;
		public Token IDENTIFIER;
		public ArgsListContext inheritedAttrs;
		public ArgsListContext returnAttrs;
		public TerminalNode IDENTIFIER() { return getToken(KingRulesParser.IDENTIFIER, 0); }
		public TerminalNode ARROW() { return getToken(KingRulesParser.ARROW, 0); }
		public AllRulesContext allRules() {
			return getRuleContext(AllRulesContext.class,0);
		}
		public List<ArgsListContext> argsList() {
			return getRuleContexts(ArgsListContext.class);
		}
		public ArgsListContext argsList(int i) {
			return getRuleContext(ArgsListContext.class,i);
		}
		public SyntaxRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_syntaxRule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KingRulesListener ) ((KingRulesListener)listener).enterSyntaxRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KingRulesListener ) ((KingRulesListener)listener).exitSyntaxRule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KingRulesVisitor ) return ((KingRulesVisitor<? extends T>)visitor).visitSyntaxRule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SyntaxRuleContext syntaxRule() throws RecognitionException {
		SyntaxRuleContext _localctx = new SyntaxRuleContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_syntaxRule);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			((SyntaxRuleContext)_localctx).IDENTIFIER = match(IDENTIFIER);
			setState(85);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==L_BRACE) {
				{
				setState(84);
				((SyntaxRuleContext)_localctx).inheritedAttrs = argsList();
				}
			}

			setState(87);
			match(ARROW);
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==L_BRACE) {
				{
				setState(88);
				((SyntaxRuleContext)_localctx).returnAttrs = argsList();
				}
			}

			setState(91);
			allRules(0);
			 ((SyntaxRuleContext)_localctx).name =  (((SyntaxRuleContext)_localctx).IDENTIFIER!=null?((SyntaxRuleContext)_localctx).IDENTIFIER.getText():null); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AllRulesContext extends ParserRuleContext {
		public RuleLineContext ruleLine() {
			return getRuleContext(RuleLineContext.class,0);
		}
		public AllRulesContext allRules() {
			return getRuleContext(AllRulesContext.class,0);
		}
		public TerminalNode OR() { return getToken(KingRulesParser.OR, 0); }
		public AllRulesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_allRules; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KingRulesListener ) ((KingRulesListener)listener).enterAllRules(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KingRulesListener ) ((KingRulesListener)listener).exitAllRules(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KingRulesVisitor ) return ((KingRulesVisitor<? extends T>)visitor).visitAllRules(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AllRulesContext allRules() throws RecognitionException {
		return allRules(0);
	}

	private AllRulesContext allRules(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		AllRulesContext _localctx = new AllRulesContext(_ctx, _parentState);
		AllRulesContext _prevctx = _localctx;
		int _startState = 16;
		enterRecursionRule(_localctx, 16, RULE_allRules, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(95);
			ruleLine();
			}
			_ctx.stop = _input.LT(-1);
			setState(102);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new AllRulesContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_allRules);
					setState(97);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(98);
					match(OR);
					setState(99);
					ruleLine();
					}
					} 
				}
				setState(104);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class RuleLineContext extends ParserRuleContext {
		public Token code;
		public AtomsContext atoms() {
			return getRuleContext(AtomsContext.class,0);
		}
		public TerminalNode CURLY_CODE() { return getToken(KingRulesParser.CURLY_CODE, 0); }
		public RuleLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ruleLine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KingRulesListener ) ((KingRulesListener)listener).enterRuleLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KingRulesListener ) ((KingRulesListener)listener).exitRuleLine(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KingRulesVisitor ) return ((KingRulesVisitor<? extends T>)visitor).visitRuleLine(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RuleLineContext ruleLine() throws RecognitionException {
		RuleLineContext _localctx = new RuleLineContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_ruleLine);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			atoms();
			setState(107);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				{
				setState(106);
				((RuleLineContext)_localctx).code = match(CURLY_CODE);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AtomsContext extends ParserRuleContext {
		public List<AtomRuleContext> atomRule() {
			return getRuleContexts(AtomRuleContext.class);
		}
		public AtomRuleContext atomRule(int i) {
			return getRuleContext(AtomRuleContext.class,i);
		}
		public AtomsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atoms; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KingRulesListener ) ((KingRulesListener)listener).enterAtoms(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KingRulesListener ) ((KingRulesListener)listener).exitAtoms(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KingRulesVisitor ) return ((KingRulesVisitor<? extends T>)visitor).visitAtoms(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AtomsContext atoms() throws RecognitionException {
		AtomsContext _localctx = new AtomsContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_atoms);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(110); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(109);
					atomRule();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(112); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
